@@ -26,6 +26,11 @@
         wikiuser = "Ott"
     [/entry]
     [entry]
+        name = "Bartek Waresiak (Dragonking)"
+        comment = "unit balancing, Formula AI"
+        email = "dragonking_AT_o2.pl"
+    [/entry]
+    [entry]
         name = "Benoît Timbert (Noyga)"
         wikiuser = "Noyga"
     [/entry]
@@ -565,11 +570,6 @@
 
 [about]
     title = _"Multiplayer Maps and Balancing"
-    [entry]
-        name = "Bartek Waresiak (Dragonking)"
-        comment = "unit balancing"
-        email = "dragonking_AT_o2.pl"
-    [/entry]
     [entry]
         name = "Jake Bailey (JB)"
         comment = "multiplayer maps"
